# wizki

./: .gitignore  LICENSE  README.md  pyproject.toml
wizki/: __init__.py  utils.py
wizki/kiwad/: __init__.py  kiwad.py
wizki/object_property/: __init__.py  property_class.py
